fix anchor projects on mobile

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -330,7 +330,7 @@ span.cursor.typing {
     }
 
     span.anchor#projects {
-        top: -180px;
+        top: -150px;
     }
 
     .contact-me {
